--- a/public/games/sneaks.html
+++ b/public/games/sneaks.html
@@ -23,7 +23,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Play Totally Normal sneaks Befriending Simulator" />
   <meta property="og:description" content="Play the 2023 classic by Lenixtt and Doeball" />
-  <meta property="og:url" content="https://meow.doeball.ca/games/sneaks.html" />
+  <meta property="og:url" content="https://meow.doeball.ca/games/sneaks-game" />
   <meta property="og:image" content="https://meow.doeball.ca/assets/sneakers.png" />
   <meta name="theme-color" content="#edc74a" />
 </head>
