--- a/public/index.html
+++ b/public/index.html
@@ -38,17 +38,19 @@
     </div>
     <main id="main">
         <div class="card sliding-card" id="buttons">
-            <button class="bigbutton" id="contact-button">Contact<img src="assets/envelope-svgrepo-com.svg" alt="envelope"
-                    id="envelope-icon"></button>
+            <button class="bigbutton" id="contact-button">Contact<img src="assets/envelope-svgrepo-com.svg"
+                    alt="envelope" id="envelope-icon"></button>
             <button class="bigbutton" id="comms-button">Art Commissions <img src="assets/art-palette-svgrepo-com.svg"
                     alt="art palette" id="palette-icon"> </button>
             <button class="bigbutton" id="gallery-button">Gallery <img src="assets/image-picture-svgrepo-com.svg"
                     alt="image icon" id="gallery-icon"> </button>
+            <button class="bigbutton" id="games-button">Games <img src="assets/controller-joystick-games-video-console-svgrepo-com.svg"
+                    alt="games icon" class="games-icon"> </button>
         </div>
         <div class="card sliding-card" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
-            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="assets/bl.png" alt="cat sticking out tongue emoji"
-                    class="emote"></p>
+            <p>Add me on Discord! The fastest way to reach me is @doeball <img src="assets/bl.png"
+                    alt="cat sticking out tongue emoji" class="emote"></p>
             <p>You can also dm me on any of the socials listed below, or email me at <a class="email"
                     href="mailto:doughcatball@gmail.com">doughcatball@gmail.com</a>! I'm always happy to meet new
                 people<img src="assets/boing.png" alt="doeball eyes popping out emoji" class="emote"></p>
@@ -62,8 +64,8 @@
             <p>I'm still working on this part</p>
             <p>The transitions are cool though aren't they?</p>
             <button class="bigbutton back-button">Back <img
-                    src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
-                    id="contact-back"></button>
+                    src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
+                    class="back"></button>
         </div>
         <div class="card sliding-card" id="comms">
             <button class="bigbutton back-button">Back <img
@@ -80,6 +82,20 @@
             <h3 class="bigtext">Fullbody (30 USD)</h3>
             <div class="example-art" alt="fullbody art example" id="fullbody"></div>
             <p>With any order over 45 USD, you get a bonus free icon!</p>
+            <button class="bigbutton back-button">Back <img
+                    src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
+                    class="back"></button>
+        </div>
+        <div class="card sliding-card" id="games">
+            <h2 class="bigtext">Want to play my games?</h2>
+            <p>I've worked on a few games, and uploaded some of them to this site for you to play! I hope you enjoy them
+                :3</p>
+            <p>Most of my games are done in Unity/C#, but I plan to lean more into Godot as I learn.</p>
+            <p>Contact me and let me know what you think! I'm always happy to hear feedback <img src="assets/bl.png"
+                alt="cat sticking out tongue emoji" class="emote"></p>
+            <button class="bigbutton" id="games-link-button">Show me the games! <img
+                    src="assets/controller-joystick-games-video-console-svgrepo-com.svg" alt="games icon"
+                    class="games-icon"></button>
             <button class="bigbutton back-button">Back <img
                     src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
