--- a/public/games/cartbuild/cartgame.html
+++ b/public/games/cartbuild/cartgame.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml' lang='' xml:lang=''>
+
+<!--```_____`_`````````````_____`````````````_```````````_`_``-->
+<!--``|_```_(`)```````````|``__`\```````````|`|`````````|`|`|`-->
+<!--````|`|`|/`_`__`___```|`|``|`|`___```___|`|__```__`_|`|`|`-->
+<!--````|`|```|`'_```_`\``|`|``|`|/`_`\`/`_`\`'_`\`/`_``|`|`|`-->
+<!--```_|`|_``|`|`|`|`|`|`|`|__|`|`(_)`|``__/`|_)`|`(_|`|`|`|`-->
+<!--``|_____|`|_|`|_|`|_|`|_____/`\___/`\___|_.__/`\__,_|_|_|`-->
+
+<!--You're nosy! Hello, fellow programmer/inspect tab enthusiast!-->
+
 <head>
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<title>Cart Game</title>
+	<!-- embed stuff -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Play Underground Cart Adventures: Cart School Ultimate Tunnels Edition Simulator: The Final Game Part One: The Super Speed 2D game!!! Speedrunners dream (not minecraft) Non-Voxel Game Go fast!! Deception game(there is no deception hahaha deceived you )にほん 2023 Demo Difficulty: Easy (99% will FAIL!!! (can you beat it?? (you cant lol))) +日本 ベストゲーム have you ever wanted to ride a golf cart in the Cart School tunnels????? Well you can't, it's not a golf cart, it's a maintenance cart. Now you can ride it omg + 🛒✨📮🚟🧯" />
+	<meta property="og:description" content="Underground Cart Adventures: Cart School Ultimate Tunnels Edition Simulator: The Final Game Part One: The Super Speed 2D game!!! Speedrunners dream (not minecraft) Non-Voxel Game Go fast!! Deception game(there is no deception hahaha deceived you )にほん 2023 Demo Difficulty: Easy (99% will FAIL!!! (can you beat it?? (you cant lol))) +日本 ベストゲーム have you ever wanted to ride a golf cart in the Cart School tunnels????? Well you can't, it's not a golf cart, it's a maintenance cart. Now you can ride it omg + 🛒✨📮🚟🧯" />
+	<meta property="og:url" content="https://meow.doeball.ca/games/cart-game" />
+	<meta property="og:image" content="https://meow.doeball.ca/assets/cart-game.png" />
+	<meta name="theme-color" content="#1daad1" />
 	<style type='text/css'>
-
 		/* i have come to the conclusion that it is literally impossible to style this page */
 		/* godot games have an invincible forcefield */
 
@@ -88,7 +104,7 @@
 			position: relative;
 		}
 
-		#status-indeterminate > div {
+		#status-indeterminate>div {
 			width: 4.5px;
 			height: 0;
 			border-style: solid;
@@ -98,14 +114,37 @@
 			position: absolute;
 		}
 
-		#status-indeterminate > div:nth-child(1) { transform: rotate( 22.5deg); }
-		#status-indeterminate > div:nth-child(2) { transform: rotate( 67.5deg); }
-		#status-indeterminate > div:nth-child(3) { transform: rotate(112.5deg); }
-		#status-indeterminate > div:nth-child(4) { transform: rotate(157.5deg); }
-		#status-indeterminate > div:nth-child(5) { transform: rotate(202.5deg); }
-		#status-indeterminate > div:nth-child(6) { transform: rotate(247.5deg); }
-		#status-indeterminate > div:nth-child(7) { transform: rotate(292.5deg); }
-		#status-indeterminate > div:nth-child(8) { transform: rotate(337.5deg); }
+		#status-indeterminate>div:nth-child(1) {
+			transform: rotate(22.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(2) {
+			transform: rotate(67.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(3) {
+			transform: rotate(112.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(4) {
+			transform: rotate(157.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(5) {
+			transform: rotate(202.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(6) {
+			transform: rotate(247.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(7) {
+			transform: rotate(292.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(8) {
+			transform: rotate(337.5deg);
+		}
 
 		#status-notice {
 			margin: 0 100px;
@@ -115,17 +154,20 @@
 			visibility: visible;
 		}
 	</style>
-<link id='-gd-engine-icon' rel='icon' type='image/png' href='/games/cartbuild/index.icon.png' />
-<link rel='apple-touch-icon' href='/games/cartbuild/index.apple-touch-icon.png'/>
+	<link id='-gd-engine-icon' rel='icon' type='image/png' href='/games/cartbuild/index.icon.png' />
+	<link rel='apple-touch-icon' href='/games/cartbuild/index.apple-touch-icon.png' />
 
 </head>
+
 <body>
 	<canvas id='canvas'>
 		HTML5 canvas appears to be unsupported in the current browser.<br />
 		Please try updating or use a different browser.
 	</canvas>
 	<div id='status'>
-		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
+		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'>
+			<div id='status-progress-inner'></div>
+		</div>
 		<div id='status-indeterminate' style='display: none;' oncontextmenu='event.preventDefault();'>
 			<div></div>
 			<div></div>
@@ -142,10 +184,10 @@
 	<script type='text/javascript' src='/games/cartbuild/index.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":58458256,"index.wasm":18790437},"focusCanvas":true,"gdnativeLibs":[]};
+		const GODOT_CONFIG = { "args": [], "canvasResizePolicy": 2, "executable": "index", "experimentalVK": false, "fileSizes": { "index.pck": 58458256, "index.wasm": 18790437 }, "focusCanvas": true, "gdnativeLibs": [] };
 		var engine = new Engine(GODOT_CONFIG);
 
-		(function() {
+		(function () {
 			const INDETERMINATE_STATUS_STEP_MS = 100;
 			var statusProgress = document.getElementById('status-progress');
 			var statusProgressInner = document.getElementById('status-progress-inner');
@@ -169,7 +211,7 @@
 				[statusProgress, statusIndeterminate, statusNotice].forEach(elem => {
 					elem.style.display = 'none';
 				});
-				animationCallbacks = animationCallbacks.filter(function(value) {
+				animationCallbacks = animationCallbacks.filter(function (value) {
 					return (value != animateStatusIndeterminate);
 				});
 				switch (mode) {
@@ -227,7 +269,7 @@
 				engine.startGame({
 					'onProgress': function (current, total) {
 						if (total > 0) {
-							statusProgressInner.style.width = current/total * 100 + '%';
+							statusProgressInner.style.width = current / total * 100 + '%';
 							setStatusMode('progress');
 							if (current === total) {
 								// wait for progress bar animation
@@ -245,7 +287,7 @@
 				}, displayFailureNotice);
 			}
 		})();
-	//]]></script>
+		//]]></script>
 </body>
-</html>
 
+</html>
