--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             <button class="bigbutton" id="games-button">Games <img src="assets/controller-joystick-games-video-console-svgrepo-com.svg"
                     alt="games icon" class="games-icon"> </button>
         </div>
-        <div class="card sliding-card" id="contact">
+        <div class="card sliding-card offscreen" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
             <p>Add me on Discord! The fastest way to reach me is @doeball <img src="assets/bl.png"
                     alt="cat sticking out tongue emoji" class="emote"></p>
@@ -58,7 +58,7 @@
                     src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon" class="back"
                     id="contact-back"></button>
         </div>
-        <div class="card sliding-card" id="gallery">
+        <div class="card sliding-card offscreen" id="gallery">
             <h2 class="bigtext">Check out all this art!</h2>
             <p>...I'm uhhh-</p>
             <p>I'm still working on this part</p>
@@ -67,7 +67,7 @@
                     src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
         </div>
-        <div class="card sliding-card" id="comms">
+        <div class="card sliding-card offscreen" id="comms">
             <button class="bigbutton back-button">Back <img
                     src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
@@ -86,7 +86,7 @@
                     src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
         </div>
-        <div class="card sliding-card" id="games">
+        <div class="card sliding-card offscreen" id="games">
             <h2 class="bigtext">Want to play my games?</h2>
             <p>I've worked on a few games, and uploaded some of them to this site for you to play! I hope you enjoy them
                 :3</p>
