minecraft page started

--- a/public/minecraft.html
+++ b/public/minecraft.html
@@ -27,10 +27,21 @@
     <meta name="theme-color" content="#e01227" />
 </head>
 
-<body class="glow-js">
-    <h1>Doeball's Minecraft Server</h1>
-    <p>Find information on my Minecraft server here!</p>
-    <img id="pfp" src="assets/happydoeball.png" alt="smiling doeball profile picture">
+<body>
+    <nav>
+        <a href="/" id="header-pfp"><img src="assets/happydoeball.png" alt="smiling doeball pfp"></a>
+        <div class="navbuttons">
+            <button>World Map</button>
+            <button>Screenshots</button>
+        </div>
+    </nav>
+    <main class="card">
+        <h1>Doeball's Minecraft Server</h1>
+        <p>Find information on my Minecraft server here!</p>
+    </main>
+    <main class="card">
+        <img src="assets/minecraft/spawn.png" alt="a picture of spawn">
+    </main>
 </body>
 
 </html>
