--- a/public/minecraft.html
+++ b/public/minecraft.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Doeball's Minecraft Server" />
     <meta property="og:description" content="Find information on my Minecraft server here!" />
     <meta property="og:url" content="https://meow.doeball.ca/minecraft" />
-    <meta property="og:image" content="https://meow.doeball.ca/assets/happydoeball.png" />
+    <meta property="og:image" content="https://meow.doeball.ca/assets/minecraft/spire.png" />
     <meta name="theme-color" content="#e01227" />
 </head>
 
@@ -70,6 +70,9 @@
         <img class="screenshot" src="assets/minecraft/floodedshrine.png"
             alt="one of many shrines on the server, flooded in the corner">
     </div>
+    <script defer>
+        document.querySelectorAll('.screenshot').forEach((image) => image.outerHTML = '<a target="_blank" href="' + image.src + '">' + image.outerHTML + '</a>');
+    </script>
 </body>
 
 </html>
