ease in everything

--- a/public/games/index.html
+++ b/public/games/index.html
@@ -65,7 +65,16 @@
             </a>
             <p class="game-card-description">Final group project for COMP1501, and yes, that is the title</p>
         </div>
-        <div class="game-card">
+        <div class="game-card" id="minecraft-game-card">
+            <h2 class="game-card-title">My Minecraft Server!</h2>
+            <a class="game-card-image-wrapper" href="/minecraft">
+                <img class="game-card-image" src="/assets/minecraft/spire.png"
+                    alt="view of the spire on my minecraft server">
+                <img src="/assets/external-link-svgrepo-com.svg" alt="Link" class="game-card-image-play">
+            </a>
+            <p class="game-card-description">I self-host a vanilla survival Minecraft server! Does this count as a game?</p>
+        </div>
+        <div class="game-card" id="coming-soon-card">
             <h2 class="game-card-title">More coming soon!</h2>
             <a class="game-card-image-wrapper">
                 <div id="coming-soon-pattern" class="game-card-image"></div>
