--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,8 @@
                     alt="image icon" id="gallery-icon"> </button>
             <button class="bigbutton" id="games-button">Games <img src="assets/controller-joystick-games-video-console-svgrepo-com.svg"
                     alt="games icon" class="games-icon"> </button>
+            <button class="bigbutton" id="minecraft-button" onclick="window.location.href = '/minecraft';">Minecraft Server <img src="assets/cube-svgrepo-com.svg"
+                    alt="cube icon" id="cube-icon"></button>
         </div>
         <div class="card sliding-card offscreen" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
