polish and finish up# Please enter the commit message for your changes. Lines starting

--- a/public/games/index.html
+++ b/public/games/index.html
@@ -27,6 +27,9 @@
 </head>
 
 <body class="glow-js">
+    <button class="bigbutton back-button" onclick="window.location.href='/'">Back <img
+        src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
+        class="back"></button>
     <h1 id="title">Check out my games!</h1>
     <div id="games">
         <div class="game-card">
