gallery looks pretty good now

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -13,8 +13,8 @@
 </head>
 
 <body class="glow-js">
-    <h1>A bunch of cool pictures</h1>
-    <main>
+    <h1 id="title">A bunch of cool pictures</h1>
+    <main id="gallery">
 
     </main>
 </body>
