--- a/public/gallery.html
+++ b/public/gallery.html
@@ -13,6 +13,13 @@
 </head>
 
 <body class="glow-js">
+    <nav>
+        <a href="/"><img src="/assets/happydoeball.png" alt="home"></a>
+        <form id="search" action="/gallery">
+            <button action="submit">🔎</button>
+            <input type="text" id="searchbar" placeholder="Search" name="search">
+        </form>
+    </nav>
     <h1 id="title">A bunch of cool pictures</h1>
     <main id="gallery">
 
