optimized images, linked to gallery

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--```_____`_`````````````_____`````````````_```````````_`_``-->
+<!--``|_```_(`)```````````|``__`\```````````|`|`````````|`|`|`-->
+<!--````|`|`|/`_`__`___```|`|``|`|`___```___|`|__```__`_|`|`|`-->
+<!--````|`|```|`'_```_`\``|`|``|`|/`_`\`/`_`\`'_`\`/`_``|`|`|`-->
+<!--```_|`|_``|`|`|`|`|`|`|`|__|`|`(_)`|``__/`|_)`|`(_|`|`|`|`-->
+<!--``|_____|`|_|`|_|`|_|`|_____/`\___/`\___|_.__/`\__,_|_|_|`-->
+
+<!--You're nosy! Hello, fellow programmer/inspect tab enthusiast!-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +19,13 @@
     <!-- glow stuff -->
     <link rel="stylesheet" href="/glow.css">
     <script src="/glow.js" defer></script>
+    <!-- embed stuff -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Doeball's Gallery" />
+    <meta property="og:description" content="Browse my art and art of my characters here!" />
+    <meta property="og:url" content="https://meow.doeball.ca/gallery" />
+    <meta property="og:image" content="https://meow.doeball.ca/assets/uploads/caught4k.png?optimize" />
+    <meta name="theme-color" content="#e01227" />
 </head>
 
 <body class="glow-js">
