--- a/public/minecraft.html
+++ b/public/minecraft.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Doeball's Minecraft Server" />
     <meta property="og:description" content="Find information on my Minecraft server here!" />
     <meta property="og:url" content="https://meow.doeball.ca/minecraft" />
-    <meta property="og:image" content="https://meow.doeball.ca/assets/minecraft/spire.png" />
+    <meta property="og:image" content="https://meow.doeball.ca/assets/minecraft/spire.png?optimize" />
     <meta name="theme-color" content="#e01227" />
 </head>
 
