--- a/public/404.html
+++ b/public/404.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Page Not Found" />
     <meta property="og:description" content="This content does not exist" />
     <meta property="og:url" content="https://meow.doeball.ca/404.html" />
-    <meta property="og:image" content="https://meow.doeball.ca/assets/sneakers.png" />
+    <meta property="og:image" content="https://meow.doeball.ca/assets/sneakers.png?optimize" />
     <meta name="theme-color" content="e01227" />
 </head>
 
