--- a/public/games/index.html
+++ b/public/games/index.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Doeball's Games!" />
     <meta property="og:description" content="Play my silly games here" />
     <meta property="og:url" content="https://meow.doeball.ca/games/" />
-    <meta property="og:image" content="https://meow.doeball.ca/assets/umbrela.png" />
+    <meta property="og:image" content="https://meow.doeball.ca/assets/umbrela.png?optimize" />
     <meta name="theme-color" content="#e01227" />
     <link rel="stylesheet" href="/games/index.css">
     <!-- glow -->
@@ -35,7 +35,7 @@
         <div class="game-card">
             <h2 class="game-card-title">Totally Normal sneaks Befriending Simulator</h2>
             <a class="game-card-image-wrapper" href="/games/sneaks-game">
-                <img class="game-card-image" src="/assets/umbrela.png"
+                <img class="game-card-image" src="/assets/umbrela.png?optimize"
                     alt="sneaks holding an umbrella out to the viewer">
                 <img src="/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
             </a>
@@ -44,7 +44,7 @@
         <div class="game-card">
             <h2 class="game-card-title">TASK_MANAGER</h2>
             <a class="game-card-image-wrapper" href="/games/task-manager">
-                <img class="game-card-image" src="/assets/taskmanagerthumbnail.png"
+                <img class="game-card-image" src="/assets/taskmanagerthumbnail.png?optimize"
                     alt="a green terminal showing a log of commands">
                 <img src="/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
             </a>
@@ -53,7 +53,7 @@
         <div class="game-card">
             <h2 class="game-card-title">Liquid Skies Zero</h2>
             <a class="game-card-image-wrapper" href="https://doeball.itch.io/liquid-skies-zero">
-                <img class="game-card-image" src="/assets/lszthumbnail.png"
+                <img class="game-card-image" src="/assets/lszthumbnail.png?optimize"
                     alt="a screenshot from liquid skies zero">
                 <img src="/assets/download-svgrepo-com.svg" alt="Download" class="game-card-image-play">
             </a>
@@ -62,7 +62,7 @@
         <div class="game-card" id="cart-game-card">
             <h2 class="game-card-title">Underground Cart Adventures: Cart School Ultimate Tunnels Edition Simulator: The Final Game Part One: The Super Speed 2D game!!! Speedrunners dream (not minecraft) Non-Voxel Game Go fast!! Deception game(there is no deception hahaha deceived you )にほん 2023 Demo Difficulty: Easy (99% will FAIL!!! (can you beat it?? (you cant lol))) +日本 ベストゲーム have you ever wanted to ride a golf cart in the Cart School tunnels????? Well you can't, it's not a golf cart, it's a maintenance cart. Now you can ride it omg + 🛒✨📮🚟🧯</h2>
             <a class="game-card-image-wrapper" href="/games/cart-game">
-                <img class="game-card-image" src="/assets/cart-game.png"
+                <img class="game-card-image" src="/assets/cart-game.png?optimize"
                     alt="a screenshot from the cart game">
                 <img src="/assets/play-circle-svgrepo-com.svg" alt="Play" class="game-card-image-play">
             </a>
@@ -71,7 +71,7 @@
         <div class="game-card" id="minecraft-game-card">
             <h2 class="game-card-title">My Minecraft Server!</h2>
             <a class="game-card-image-wrapper" href="/minecraft">
-                <img class="game-card-image" src="/assets/minecraft/spire.png"
+                <img class="game-card-image" src="/assets/minecraft/spire.png?optimize"
                     alt="view of the spire on my minecraft server">
                 <img src="/assets/external-link-svgrepo-com.svg" alt="Link" class="game-card-image-play">
             </a>
