--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <button class="bigbutton" id="comms-button">Art Commissions <img src="assets/art-palette-svgrepo-com.svg"
                     alt="art palette" id="palette-icon"> </button>
             <button class="bigbutton" id="gallery-button">Gallery <img src="assets/image-picture-svgrepo-com.svg"
-                    alt="image icon" id="gallery-icon"> </button>
+                    alt="image icon" class="gallery-icon"> </button>
             <button class="bigbutton" id="games-button">Games <img src="assets/controller-joystick-games-video-console-svgrepo-com.svg"
                     alt="games icon" class="games-icon"> </button>
             <button class="bigbutton" id="minecraft-button" onclick="window.location.href = '/minecraft';">Minecraft Server <img src="assets/cube-svgrepo-com.svg"
@@ -62,9 +62,10 @@
         </div>
         <div class="card sliding-card offscreen" id="gallery">
             <h2 class="bigtext">Check out all this art!</h2>
-            <p>...I'm uhhh-</p>
-            <p>I'm still working on this part</p>
-            <p>The transitions are cool though aren't they?</p>
+            <p>Check out my gallery page to see all my recent art, and art other people have made of my characters! You can search for a specific character, if you are looking for a reference <img src="assets/bl.png"
+                alt="cat sticking out tongue emoji" class="emote"></p>
+            <button class="bigbutton" id="gallery-link-button">View the gallery! <img src="assets/image-picture-svgrepo-com.svg"
+                alt="image icon" class="gallery-icon"></button>
             <button class="bigbutton back-button">Back <img
                     src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
@@ -75,8 +76,7 @@
                     class="back"></button>
             <h2 class="bigtext">Want some art?</h2>
             <p>I am often busy, but I can draw your characters or make a reference sheet for you!</p>
-            <p>(I plan on making another page to showcase all my art and process commissions automatically, but for now,
-                here are some examples)</p>
+            <p>(I'm pretty busy right now, but I plan to make a page to process commissions eventually!)</p>
             <h3 class="bigtext">Headshot/Icon (10 USD)</h3>
             <div class="example-art" alt="headshot art example" id="headshot"></div>
             <h3 class="bigtext">Halfbody (20 USD)</h3>
