--- a/public/gallery.html
+++ b/public/gallery.html
@@ -39,6 +39,14 @@
             <input type="text" id="searchbar" placeholder="Search" name="search">
         </form>
     </nav>
+    <div id="search-terms-container" hidden>
+        <h3 id="search-terms"></h3>
+        <a href="/gallery" id="clear-search">Clear Search</a>
+    </div>
+    <div id="no-results-container" hidden>
+        <h3 id="no-results">No results</h3>
+        <img src="/assets/sneaks_cube.gif" alt="smug sneakers">
+    </div>
     <main id="gallery">
         <!-- injected by javascript -->
     </main>
