--- a/public/404.html
+++ b/public/404.html
@@ -29,7 +29,7 @@
 
 <body class="glow-js">
     <h1 id="title">404 not found</h1>
-    <img src="/assets/sneakers.png" alt="sneaks with a smug aura">
+    <img src="/assets/sneaks_cube.gif" alt="sneaks with a smug aura">
 </body>
 
 </html>
