gallery embed color

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -25,7 +25,7 @@
     <meta property="og:description" content="Browse my art and art of my characters here!" />
     <meta property="og:url" content="https://meow.doeball.ca/gallery" />
     <meta property="og:image" content="https://meow.doeball.ca/assets/uploads/caught4k.png?optimize" />
-    <meta name="theme-color" content="#e01227" />
+    <meta name="theme-color" content="#b00be5" />
 </head>
 
 <body class="glow-js">
