better image viewing

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -50,6 +50,13 @@
     <main id="gallery">
         <!-- injected by javascript -->
     </main>
+    <div id="image-view">
+        <!-- overwritten by javascript -->
+        <div id="enlarged-image-container">
+            <img id="enlarged-image" src="/assets/loading.gif" alt="placeholder image">
+            <a href="#" id="enlarged-image-link">View Original</a>
+        </div>
+    </div>
 </body>
 
 </html>
