loading icon in gallery

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -50,6 +50,7 @@
     <main id="gallery">
         <!-- injected by javascript -->
     </main>
+    <img src="/assets/loading.gif" alt="loading gif, spinning sneaks cube" id="loading" hidden>
     <div id="image-view">
         <!-- overwritten by javascript -->
         <div id="enlarged-image-container">
