on my way to test in production

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -14,8 +14,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" href="gallery.css">
-    <script src="gallery.js" defer></script>
+    <link rel="stylesheet" href="/gallery.css">
+    <script src="/gallery.js" defer></script>
     <!-- glow stuff -->
     <link rel="stylesheet" href="/glow.css">
     <script src="/glow.js" defer></script>
