add radio shiiii

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
         <h1 class="bigtext" id="title">Doeball!!<img id="doeball-emoji" src="assets/doemoji.png"></h1>
         <h3 class="bigtext">Artist & Game Developer :3</h3>
     </div>
+    <div class="card" id="radio">
+        <iframe src="https://radio.doeball.ca/public/boing/embed?theme=dark" frameborder="0" allowtransparency="true"></iframe>
+    </div>
     <main id="main">
         <div class="card sliding-card" id="buttons">
             <button class="bigbutton" id="contact-button">Contact<img src="assets/envelope-svgrepo-com.svg"
@@ -44,10 +47,11 @@
                     alt="art palette" id="palette-icon"> </button>
             <button class="bigbutton" id="gallery-button">Gallery <img src="assets/image-picture-svgrepo-com.svg"
                     alt="image icon" class="gallery-icon"> </button>
-            <button class="bigbutton" id="games-button">Games <img src="assets/controller-joystick-games-video-console-svgrepo-com.svg"
-                    alt="games icon" class="games-icon"> </button>
-            <button class="bigbutton" id="minecraft-button" onclick="window.location.href = '/minecraft';">Minecraft Server <img src="assets/cube-svgrepo-com.svg"
-                    alt="cube icon" id="cube-icon"></button>
+            <button class="bigbutton" id="games-button">Games <img
+                    src="assets/controller-joystick-games-video-console-svgrepo-com.svg" alt="games icon"
+                    class="games-icon"> </button>
+            <button class="bigbutton" id="minecraft-button" onclick="window.location.href = '/minecraft';">Minecraft
+                Server <img src="assets/cube-svgrepo-com.svg" alt="cube icon" id="cube-icon"></button>
         </div>
         <div class="card sliding-card offscreen" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
@@ -62,10 +66,11 @@
         </div>
         <div class="card sliding-card offscreen" id="gallery">
             <h2 class="bigtext">Check out all this art!</h2>
-            <p>Check out my gallery page to see all my recent art, and art other people have made of my characters! You can search for a specific character, if you are looking for a reference <img src="assets/bl.png"
-                alt="cat sticking out tongue emoji" class="emote"></p>
-            <button class="bigbutton" id="gallery-link-button">View the gallery! <img src="assets/image-picture-svgrepo-com.svg"
-                alt="image icon" class="gallery-icon"></button>
+            <p>Check out my gallery page to see all my recent art, and art other people have made of my characters! You
+                can search for a specific character, if you are looking for a reference <img src="assets/bl.png"
+                    alt="cat sticking out tongue emoji" class="emote"></p>
+            <button class="bigbutton" id="gallery-link-button">View the gallery! <img
+                    src="assets/image-picture-svgrepo-com.svg" alt="image icon" class="gallery-icon"></button>
             <button class="bigbutton back-button">Back <img
                     src="assets/back-arrow-direction-down-right-left-up-2-svgrepo-com.svg" alt="back icon"
                     class="back"></button>
@@ -94,7 +99,7 @@
                 :3</p>
             <p>Most of my games are done in Unity/C#, but I plan to lean more into Godot as I learn.</p>
             <p>Contact me and let me know what you think! I'm always happy to hear feedback <img src="assets/bl.png"
-                alt="cat sticking out tongue emoji" class="emote"></p>
+                    alt="cat sticking out tongue emoji" class="emote"></p>
             <button class="bigbutton" id="games-link-button">Show me the games! <img
                     src="assets/controller-joystick-games-video-console-svgrepo-com.svg" alt="games icon"
                     class="games-icon"></button>
