updated old page content

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
         <div class="card sliding-card offscreen" id="contact">
             <h2 class="bigtext">Have something to tell me?</h2>
             <p>Add me on Discord! The fastest way to reach me is @doeball <img src="assets/bl.png"
-                    alt="cat sticking out tongue emoji" class="emote"></p>
+                    alt="cat sticking out tongue emoji" class="emote"> you can also join my server using the button below</p>
             <p>You can also dm me on any of the socials listed below, or email me at <a class="email"
                     href="mailto:doughcatball@gmail.com">doughcatball@gmail.com</a>! I'm always happy to meet new
                 people<img src="assets/boing.png" alt="doeball eyes popping out emoji" class="emote"></p>
@@ -81,7 +81,7 @@
                     class="back"></button>
             <h2 class="bigtext">Want some art?</h2>
             <p>I am often busy, but I can draw your characters or make a reference sheet for you!</p>
-            <p>(I'm pretty busy right now, but I plan to make a page to process commissions eventually!)</p>
+            <p>(This section is pretty outdated, I haven't done commissions in a while, but we can still discuss if you're interested)</p>
             <h3 class="bigtext">Headshot/Icon (10 USD)</h3>
             <div class="example-art" alt="headshot art example" id="headshot"></div>
             <h3 class="bigtext">Halfbody (20 USD)</h3>
@@ -97,7 +97,7 @@
             <h2 class="bigtext">Want to play my games?</h2>
             <p>I've worked on a few games, and uploaded some of them to this site for you to play! I hope you enjoy them
                 :3</p>
-            <p>Most of my games are done in Unity/C#, but I plan to lean more into Godot as I learn.</p>
+            <p>Most of my older games are done in Unity/C#, but my newer games are focusing on Godot.</p>
             <p>Contact me and let me know what you think! I'm always happy to hear feedback <img src="assets/bl.png"
                     alt="cat sticking out tongue emoji" class="emote"></p>
             <button class="bigbutton" id="games-link-button">Show me the games! <img
@@ -155,7 +155,7 @@
                         </g>
                     </svg>
                 </a>
-                <p>And here too</p>
+                <p>And here previously</p>
             </div>
         </div>
     </div>
